# graph-agent

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  kg-qa-poc-spec.docx  kg-qa-poc-spec.md  pyproject.toml
data/: few_shots.yaml  schema.yaml  schema_elevator.yaml  schema_property.yaml  seed_data.cypher  seed_data_elevator.cypher  seed_data_property.cypher
docs/: agent-architecture.md  memo-architecture-directions.md  stage-01-status.md  stage-02-status.md  stage-03-1-plan.md  stage-03-2-refactor.md  stage-03-3-false-case-optimization-plan.md  stage-03-4-effervescent-chasing-rose.md  stage-03-5-few-shot-audit.md  stage-03-refactor.md  stage-04-1-agent-cutover.md  stage-04-2-next-features-plan.md  stage-04-3-multi-scenario-generalization.md  stage-04-4-agent-loop-hardening.md  stage-04-5-prompt-orchestration.md  stage-04-6-session-persistence-replan.md  stage-04-7-1-schema-graph-view.md  stage-04-7-2-schema-graph-view-execution-plan.md  stage-04-8-1-follow-up-reference-resolution.md  stage-04-8-2-follow-up-reference-resolution-simplified.md  stage-04-9-query-intent-parsing.md
eval/: run_eval.py
frontend/: .env.example  index.html  package-lock.json  package.json
scripts/: generate_elevator_seed_data.py  generate_property_seed_data.py  generate_seed_data.py  load_seed_data.py  start_local_services.ps1  stop_local_services.ps1
tests/: conftest.py  test_agent_tools.py  test_chat_api.py  test_e2e.py  test_eval_helpers.py  test_hardening.py  test_multistep.py  test_query_normalization.py  test_scenarios.yaml  test_scenarios_phase1.py  (+2 more)
(+25 files in other folders)
